# electronics

./: .editorconfig  .gitignore  .tool-versions  CMakeLists.txt  CMakePresets.json  Makefile  README.md  engineering-index.md  pyproject.toml  yaml.py
.devcontainer/: devcontainer.json
assets/: README.md
benchmarks/: README.md
diagrams/: README.md
docker/: ci.Dockerfile
docs/: README.md  authoritative-research-policy.md  benchmarks.md  debugging.md  documentation_generation.md  faq.md  glossary.md  implementation.md  production.md  references.md  roadmap.md  theory.md
examples/: README.md
firmware/storage/: CMakeLists.txt
firmware/storage/ftl/: ftl.c  ftl_allocator.c  ftl_checkpoint.c  ftl_gc.c  ftl_journal.c  ftl_mapping.c  ftl_metrics.c  ftl_recovery.c  ftl_trim.c  ftl_wear.c
firmware/storage/include/ftl/: ftl.h  ftl_metrics.h  ftl_types.h
firmware/storage/include/nand/: nand.h  nand_hal.h  nand_profile.h  nand_status.h
firmware/storage/include/storage/: storage_device.h
firmware/storage/nand/: nand.c  nand_bad_blocks.c  nand_commands.c  nand_hal_hardware_stub.c  nand_hal_mock.c  nand_status.c
firmware/storage/tests/integration/: test_storage.c
hardware/: README.md
learning/: Advanced.md  Beginner.md  Intermediate.md  Production.md  README.md
projects/: README.md
projects/ssd_lab/firmware/: CMakeLists.txt
projects/ssd_lab/firmware/app/: main.c
projects/ssd_lab/firmware/include/ssd/: platform.h  status.h
projects/ssd_lab/firmware/src/: platform_host.c  status.c
projects/ssd_lab/firmware/tests/: test_status.c
tests/: README.md
(+389 files in other folders)
